--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 29 09:47:45 PDT 2022
-sdk.dir=C\:\\Users\\Alok Kumar\\AppData\\Local\\Android\\Sdk
+#Thu Jun 30 10:26:41 IST 2022
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
